--- a/app/global.css
+++ b/app/global.css
@@ -19,7 +19,7 @@ body {
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 120px;
+  padding-bottom: 140px;
   /* height of your footer */
 }
 
@@ -27,4 +27,5 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 140px;
 }
