--- a/app/global.css
+++ b/app/global.css
@@ -19,13 +19,14 @@ body {
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 140px;
+  padding-bottom: 100px;
   /* height of your footer */
 }
 
 footer {
+  text-align: center;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 140px;
+  height: 100px;
 }
