--- a/app/global.css
+++ b/app/global.css
@@ -30,3 +30,9 @@ footer {
   width: 100%;
   height: 100px;
 }
+
+canvas {
+  width: 960px;
+  height: 600px;
+  background: url("/Unity/WebGL.jpg") center / cover;
+}
