--- a/app/global.css
+++ b/app/global.css
@@ -30,3 +30,21 @@ footer {
   width: 100%;
   height: 150px;
 }
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #3c5d6e;
+  border-radius: 6px;
+  outline: none;
+  transition: 0.3s;
+  border: 2px solid transparent;
+}
+.button:hover,
+.button:focus {
+  background-color: #c2c7c7;
+  border-color: #7aa8b7;
+}
