--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -7,10 +9,22 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-bg: #eef0f1;
+  --color-text: #08090a;
+  --color-blue: #3b49df;
+  --color-red: #df3b3b;
+  --color-green: #3bdf72;
+  --color-gray: #b5bdc4;
+}
+
 html,
 body {
   height: 100%;
   position: relative;
+  font-family: "Noto Sans", sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-text);
 }
 
 .main-container {
@@ -19,7 +33,7 @@ body {
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 160px;
+  padding-bottom: 180px;
   /* height of your footer */
 }
 
@@ -28,7 +42,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 160px;
+  height: 180px;
 }
 
 /* Buttons */
@@ -44,6 +58,7 @@ footer {
   transition: 0.3s;
   border: 2px solid transparent;
 }
+
 .button:hover,
 .button:focus {
   background-color: #c2c7c7;
