--- a/app/global.css
+++ b/app/global.css
@@ -70,24 +70,12 @@ button {
   background-color: var(--color-gray);
   border: none;
   color: var(--color-text);
-  padding: 1rem 2rem;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  text-decoration: none;
+  padding: 1rem 1rem;
   font-family: "Noto Sans", sans-serif;
   font-weight: bold;
   border-radius: 0.25rem;
   cursor: pointer;
-  margin: 0.5rem 1rem 0.5rem 0;
-}
-
-@media only screen and (max-width: 768px) {
-  button {
-    padding: 0.5rem 1rem;
-    font-size: 0.8rem;
-  }
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
 button:hover {
@@ -131,6 +119,18 @@ button.btn-logo {
   text-transform: uppercase;
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
+}
+
+code {
+  overflow-x: scroll;
+}
+
+.url-snippet {
+  width: 75%;
+  margin-left: auto;
+  background: white;
+  padding: 5px;
+  margin: 5px 0;
 }
 
 .text-sm {
