--- a/app/global.css
+++ b/app/global.css
@@ -37,6 +37,13 @@ body {
   /* height of your footer */
 }
 
+.main-content {
+  min-width: 640px;
+  max-width: 640px;
+  position: relative;
+  margin: 0 auto;
+}
+
 footer {
   text-align: center;
   position: absolute;
