--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  background: #eef0f1;
+  --color-bg: #eef0f1;
+  --color-text: #08090a;
+  --color-blue: #3b49df;
+  --color-red: #df3b3b;
+  --color-green: #3bdf72;
+  --color-gray: #b5bdc4;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -9,25 +23,17 @@
   box-sizing: border-box;
 }
 
-:root {
-  --color-bg: #eef0f1;
-  --color-text: #08090a;
-  --color-blue: #3b49df;
-  --color-red: #df3b3b;
-  --color-green: #3bdf72;
-  --color-gray: #b5bdc4;
-}
-
 html,
 body {
+  background-color: var(--color-bg);
+  color: var(--color-text);
   height: 100%;
   position: relative;
   font-family: "Noto Sans", sans-serif;
-  background-color: var(--color-bg);
-  color: var(--color-text);
 }
 
 .main-container {
+  background-color: var(--color-bg);
   min-height: 100vh;
   /* will cover the 100% of viewport */
   overflow: hidden;
@@ -38,21 +44,19 @@ body {
 }
 
 .main-content {
+  background-color: var(--color-bg);
   max-width: 900px;
   position: relative;
   margin: 0 auto;
 }
 
 footer {
+  background-color: var(--color-bg);
   text-align: center;
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 200px;
-}
-
-table {
-  width: 100%;
 }
 
 /* Buttons */
