Update and Prettier

--- a/app/global.css
+++ b/app/global.css
@@ -6,9 +6,9 @@
 
 /* variables */
 :root {
-  background: #432E16;
-  --color-bg: #432E16;
-  --color-text: #FFFFFF;
+  background: #432e16;
+  --color-bg: #432e16;
+  --color-text: #ffffff;
   --color-blue: #3b49df;
   --color-red: #df3b3b;
   --color-green: #3bdf72;
