--- a/app/global.css
+++ b/app/global.css
@@ -11,7 +11,7 @@
   --color-gold: #d3bd7a;
   --color-text: #ffffff;
   --color-gray: #475569;
-  --color-green: #058066;
+  --color-green: #05fac6;
   --color-red: #df3b3b;
 }
 
