--- a/app/global.css
+++ b/app/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -23,7 +23,7 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .main-container {
@@ -86,7 +86,7 @@ button {
   border: none;
   color: var(--color-text);
   padding: 1rem 1rem;
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-weight: bold;
   border-radius: 0.25rem;
   cursor: pointer;
