--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap');
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /* variables */
 :root {
