--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 @import 'tailwindcss';
+@config '../tailwind.config.js';
 
 /* variables */
 :root {
