--- a/app/globals.css
+++ b/app/globals.css
@@ -30,11 +30,11 @@ body {
 .main-container {
   background-color: var(--color-bg);
   /* will cover the viewport */
-  min-height: calc(100vh - 160px);
+  min-height: 100vh;
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 160px;
+  padding-bottom: 140px;
   /* height of your footer */
 }
 
@@ -51,7 +51,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 160px;
+  height: 140px;
 }
 
 /* Link */
