--- a/app/globals.css
+++ b/app/globals.css
@@ -34,8 +34,8 @@ body {
   overflow: hidden;
   display: block;
   position: relative;
-  padding-bottom: 140px;
-  /* height of your footer */
+  padding-bottom: 120px;
+  /* height of the footer */
 }
 
 .main-content {
@@ -51,7 +51,8 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 140px;
+  height: 120px;
+  /* padding-bottom of the main-container */
 }
 
 /* Link */
