--- a/app/globals.css
+++ b/app/globals.css
@@ -182,8 +182,8 @@ button[disabled] {
 }
 
 .dark {
-  --background: oklch(0.129 0.042 264.695);
-  --foreground: oklch(0.984 0.003 247.858);
+  --background: var(--color-brown);
+  --foreground: var(--color-white);
   --card: oklch(0.208 0.042 265.755);
   --card-foreground: oklch(0.984 0.003 247.858);
   --popover: oklch(0.208 0.042 265.755);
